debian-bo-master/bo/source/devel/cygwin32-17.1.orig/src/gcc/testsuite/g++.brendan/ns1.C
struct B 
{
  void f(char);
  void g(char);
};
  
class C 
{
  int g();
};

class D2 : public B 
{
  using B::f;  // ok: B is a base of D
  using C::g;  // error: C isn't a base of D2
};
